fix: pseudocode overflow, affiliation font normal, author stacked layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@
 .author-detail {
   font-size: 10pt;
   font-style: normal;
-  font-family: 'Times New Roman', serif;
+  font-family: 'Times New Roman', Times, serif;
   margin: 0;
   text-align: center;
   color: #444;
